# Project_2_sem

./: Ball.h  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Map — копия.txt  Map.h  README.md  main.cpp
Map/: Map.cpp  Map.h
Map/files/: Map — копия (2).txt  Map.txt
files/: Map — копия.txt
